--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
             <span></span>
             <span></span>
         </div>
-        
-        <ul>
-            <li>home</li>
-            <li>home</li>
-            <li>home</li>
-            <li>home</li>
-        </ul>
+
+        <div class="folowers">
+            
+        </div>
     </div>
    
     <div class=""></div>
