--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
             <span></span>
             <span></span>
         </div>
-
-        <div class="folowers">
-            
-        </div>
+        <!-- home menu -->
+        <div class="folowers"></div>
+        <!-- libriry -->
+        <div class="libriry"></div>
+        <!-- navigation -->
+        <div class="navigation"></div>
     </div>
    
     <div class=""></div>
@@ -54,9 +56,7 @@
    </section>
 
 
-
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Faker/3.1.0/faker.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/Faker/3.1.0/faker.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
