--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
             <span></span>
             <span></span>
         </div>
-        <!-- home menu -->
-        <div class="folowers"></div>
-        <!-- libriry -->
-        <div class="libriry"></div>
-        <!-- navigation -->
-        <div class="navigation"></div>
+        <div class="scrollbar">
+            <!-- home menu -->
+            <div class="folowers"></div>
+            <!-- libriry -->
+            <div class="libriry"></div>
+            <!-- navigation -->
+            <div class="navigation"></div>
+        </div>
     </div>
    
     <div class=""></div>
@@ -47,16 +49,25 @@
         </div>
    </div>
 </header>
-   <section class="section1">
-        <button class="prew"><</button>
-            <div class="sliderMove">
-                <div class="sliderMenu"></div>
-            </div>
-        <button class="next">></button>
-   </section>
+<section class="section1">
+    <button class="prew"><</button>
+        <div class="sliderMove">
+            <div class="sliderMenu"></div>
+        </div>
+    <button class="next">></button>
+</section>
 
+<!-- main -->
+<main>
+    <div class="containerVideo">
+        <div class="videoCont1">
+                  
+        </div>
+    </div>
+</main>
 
    <script src="https://cdnjs.cloudflare.com/ajax/libs/Faker/3.1.0/faker.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
